# samesport-bot

./: .gitignore  .venv_defult  README.md  alembic.ini  config_default.py  pyproject.toml  requirements.txt  u0307261_newsite.sql
alembic/: env.py
alembic/versions/: 1bd0e830e5aa_third_attempt.py
bot/: __main__.py  loader.py  my_states.py  readme.md
bot/db/: __main__.py  db_funs.py  models.py  my_logger.py  readme.md  schemas.py  session.py  sport_session.py  temp.py  users.py
bot/paths/: __init__.py  about_bot.py  change_info.py  check_info.py  choose_section.py  echo.py  readme.md  welcome.py
bot/paths/user_poll/: start_poll.py
bot/utils/: kb_generator.py
